force-app/main/default/objects/Default_Utility_Fee__c/Default_Utility_Fee__c.object-meta.xml
<CustomObject>
    <label>Default Utility Fee</label>
    <nameField>
        
        <displayFormat>Utility Fee - {0000}</displayFormat>
        
        <label>Default Utility Fee Name</label>
        
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Default Utility Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>