force-app/main/default/objects/Default_Utility_Fee__c/fields/Amount_kWh__c.field-meta.xml
<CustomField>
    <fullName>Amount_kWh__c</fullName>
    <label>Amount (kWh)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>