force-app/main/default/objects/Default_Utility_Fee__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>This is used as the Production Detail name in the Production Input Flow.</inlineHelpText>
    <label>Description</label>
    <length>25</length>
    <type>Text</type>
</CustomField>