force-app/main/default/objects/Default_Utility_Fee__c/fields/Method_for_UCB_Utility_Admin__c.field-meta.xml
<CustomField>
    <fullName>Method_for_UCB_Utility_Admin__c</fullName>
    <label>Method for UCB Utility Admin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDG Subscription Fee</fullName>
            </value>
            <value>
                <fullName>Calculated Credits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>