force-app/main/default/objects/Default_Utility_Fee__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UCB</fullName>
            </value>
            <value>
                <fullName>Non-UCB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>