force-app/main/default/objects/Default_Utility_Fee__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility</label>
    <referenceTo>Utility__c</referenceTo>
    <relationshipLabel>Default Utility Fees</relationshipLabel>
    <relationshipName>Default_Utility_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>