force-app/main/default/objects/Default_Utility_Fee__c/fields/Utility_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Utility_Admin_Fee__c</fullName>
    <label>Utility Admin Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>